# Qt

./: .gitignore
Lesson 1/Task_1/: CMakeLists.txt  main.cpp
Lesson 1/build-Task_1-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9eab7ffd2b8178dc12ff.json  codemodel-v2-876bef79c0ff4eb4e59e.json
Lesson 1/build-Task_1-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-2bcdbc78a13b7e6fcea5.json  cmakeFiles-v1-1ee6d7faeec0b6e902cc.json  target-Task_1-Debug-228ae2a0dd1bbe0f6fee.json  target-Task_1_autogen-Debug-1f6625fed6ac9a611c1b.json
Lesson 10/Task_1/: mainwindow.cpp  tcpclient.cpp  tcpclient.h
Lesson 2/build-Task_1-Desktop-Debug/: CMakeCache.txt.prev
Lesson 2/build-Task_1-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-b066a71a2bb8d5c828c9.json  directory-.-Debug-649ff7c9f2e018f1c967.json  index-2023-09-22T16-23-53-0486.json
Lesson 2/build-Task_1-Desktop-Debug/.qt/: QtDeploySupport.cmake
Lesson 3/Task_1/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 4/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 5/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson 6/Task_1/: CMakeLists.txt  mainwindow.cpp
Lesson 7/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Lesson 8/Task_1/: database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 9/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
(+3 files in other folders)
